--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
 	          	<span class="subheading">Discover</span>
 	            <h2 class="mb-4">Our Menu</h2>
 	            <p class="mb-4">Indulge in our carefully curated menu, designed to satisfy every palate. From rich espresso to creamy lattes, we have something for everyone.</p>
-	            <p><a href="/menu" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a></p>
+	            <p><a href="/menu.html" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a></p>
 	          </div>
     			</div>
     			<div class="col-md-6">
