--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Take & Go</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <link rel="icon" href="https://media.discordapp.net/attachments/1241896798763876473/1270392066081558669/favicon-32x32.png?ex=66b3884f&is=66b236cf&hm=7a7d160f064ebcfeb55ff0f9f6fee750a2e0e91cd0756f7cf463087eaade6102&=&format=webp&quality=lossless" type="image/svg+xml">
+
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
