--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Take & Go</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="https://media.discordapp.net/attachments/1241896798763876473/1270392066081558669/favicon-32x32.png?ex=66b3884f&is=66b236cf&hm=7a7d160f064ebcfeb55ff0f9f6fee750a2e0e91cd0756f7cf463087eaade6102&=&format=webp&quality=lossless" type="image/svg+xml">
-
+	<link rel="icon" href="https://cdn.discordapp.com/attachments/1241896798763876473/1270393418211790938/favicon-32x32.png?ex=66b38991&is=66b23811&hm=5d6d84b24753f5d17551841bf741f6592ad193799361164f6ddcda337f4eda84&" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
@@ -28,6 +27,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
+
   </head>
   <body>
   	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
