--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <title>Take & Go</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1241896798763876473/1270393418211790938/favicon-32x32.png?ex=66b38991&is=66b23811&hm=5d6d84b24753f5d17551841bf741f6592ad193799361164f6ddcda337f4eda84&" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
