--- a/index.html
+++ b/index.html
@@ -184,20 +184,40 @@
     	</div>
     </section>
 
-    <section class="ftco-about d-md-flex">
-    	<div class="one-half img" style="background-image: url(images/about.jpg);"></div>
-    	<div class="one-half ftco-animate">
-    		<div class="overlap">
-	        <div class="heading-section ftco-animate ">
-	        	<span class="subheading">Discover</span>
-	          <h2 class="mb-4">Us</h2>
-	        </div>
-	        <div>
-	  				<p>At Take & Go, we believe that great coffee should be accessible and convenient. Our passion for quality and community drives us to source the best beans and serve them with a smile. Come in and experience our friendly atmosphere and exceptional brews.</p>
-	  			</div>
-  			</div>
-    	</div>
-    </section>
+	<section class="ftco-about d-md-flex">
+		<div class="one-half video">
+			<video autoplay loop muted playsinline class="video-background">
+				<source src="vids/SaveInsta.App - 2982063362097978993.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+		</div>
+		<div class="one-half ftco-animate">
+			<div class="overlap">
+				<div class="heading-section ftco-animate">
+					<span class="subheading">Discover</span>
+					<h2 class="mb-4">Us</h2>
+				</div>
+				<div>
+					<p>Discover Us
+						At Take & Go, we believe great coffee should be accessible to everyone. Founded in [Year], our passion for quality and community drives us to serve exceptional coffee sourced from sustainable farms. Join us for a quick coffee on the go or a relaxing break in our welcoming space.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<style>
+		.video {
+			position: relative;
+			overflow: hidden;
+		}
+	
+		.video-background {
+			width: 100%;
+			height: auto;
+			object-fit: cover;
+		}
+	</style>
+	
 
     <section class="ftco-section ftco-services">
     	<div class="container">
