--- a/index.html
+++ b/index.html
@@ -58,61 +58,51 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="home-slider owl-carousel">
-      <div class="slider-item" style="background-image: url(images/bg_1.jpg);">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-            <div class="col-md-8 col-sm-12 text-center ftco-animate">
-            	<span class="subheading">Welcome</span>
-              <h1 class="mb-4">The Best Coffee Testing Experience</h1>
-              <p class="mb-4 mb-md-5">Welcome to Take & Go!
-
-</p>
-              <p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-      <div class="slider-item" style="background-image: url(images/bg_2.jpg);">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-            <div class="col-md-8 col-sm-12 text-center ftco-animate">
-            	<span class="subheading">Welcome</span>
-              <h1 class="mb-4">Amazing Taste &amp; Beautiful Place</h1>
-              <p class="mb-4 mb-md-5">Welcome to Take & Go!
-
-</p>
-<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
-</div>
-
-          </div>
-        </div>
-      </div>
-
-      <div class="slider-item" style="background-image: url(images/bg_3.jpg);">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-            <div class="col-md-8 col-sm-12 text-center ftco-animate">
-            	<span class="subheading">Welcome</span>
-              <h1 class="mb-4">Creamy Hot and Ready to Serve</h1>
-              <p class="mb-4 mb-md-5">Welcome to Take & Go!
-
-</p>
-<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
-</div>
-
-          </div>
-        </div>
-      </div>
-    </section>
+	<section class="home-slider owl-carousel">
+		<div class="slider-item" style="background-image: url(images/bg_1.jpg);">
+		  <div class="overlay"></div>
+		  <div class="container">
+			<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+			  <div class="col-md-8 col-sm-12 text-center ftco-animate">
+				<span class="subheading">Welcome</span>
+				<h1 class="mb-4">You can PRE order your coffee now.</h1>
+				<h1 class="mb-4">THEN TAKE IT & GO OR STAY :)</h1>
+				<p class="mb-4 mb-md-5">Welcome to Take & Go!</p>
+				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  
+		<div class="slider-item" style="background-image: url(images/bg_2.jpg);">
+		  <div class="overlay"></div>
+		  <div class="container">
+			<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+			  <div class="col-md-8 col-sm-12 text-center ftco-animate">
+				<span class="subheading">Welcome</span>
+				<h1 class="mb-4">Amazing Taste &amp; Beautiful Place</h1>
+				<p class="mb-4 mb-md-5">Welcome to Take & Go!</p>
+				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  
+		<div class="slider-item" style="background-image: url(images/bg_3.jpg);">
+		  <div class="overlay"></div>
+		  <div class="container">
+			<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+			  <div class="col-md-8 col-sm-12 text-center ftco-animate">
+				<span class="subheading">Welcome</span>
+				<h1 class="mb-4">Creamy Hot and Ready to Serve</h1>
+				<p class="mb-4 mb-md-5">Welcome to Take & Go!</p>
+				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>
+	  
 
     <section class="ftco-intro">
     	<div class="container-wrap">
@@ -143,7 +133,7 @@
 	    			</div>
 	    		</div>
 	    		<div class="book p-4">
-	    			<h3>Book a Table</h3>
+	    			<h3>Order A Coffee !</h3>
 	    			<form action="#" class="appointment-form">
 	    				<div class="d-md-flex">
 		    				<div class="form-group">
@@ -172,10 +162,10 @@
 	    				</div>
 	    				<div class="d-md-flex">
 	    					<div class="form-group">
-		              <textarea name="" id="" cols="30" rows="2" class="form-control" placeholder="Message"></textarea>
+		              <textarea name="" id="" cols="30" rows="2" class="form-control" placeholder="Message (exmpl : Chnouwa theb tekho 9adesh soker ...)"></textarea>
 		            </div>
 		            <div class="form-group ml-md-4">
-		              <input type="submit" value="Appointment" class="btn btn-white py-3 px-4">
+		              <input type="submit" value="order" class="btn btn-white py-3 px-4">
 		            </div>
 	    				</div>
 	    			</form>
@@ -349,21 +339,21 @@
     	<div class="container-wrap">
     		<div class="row no-gutters">
 					<div class="col-md-3 ftco-animate">
-						<a href="gallery.html" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-1.jpg);">
+						<a href="images\gallery-1.jpg" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-1.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="gallery.html" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-2.jpg);">
+						<a href="images\gallery-2.jpg" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-2.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="gallery.html" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-3.jpg);">
+						<a href="images\gallery-3.jpg" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-3.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
