--- a/index.html
+++ b/index.html
@@ -472,11 +472,11 @@
               </a>
               <div class="text py-4 d-block">
               	<div class="meta">
-                  <div><a href="#">Sept 10, 2018</a></div>
+                  <div><a href="#">july 23, 2024</a></div>
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                 </div>
-                <h3 class="heading mt-2"><a href="#">The Delicious Pizza</a></h3>
+                <h3 class="heading mt-2"><a href="#">The Delicious coffee</a></h3>
                 <p>Welcome to Take & Go!
 
 </p>
@@ -489,11 +489,11 @@
               </a>
               <div class="text py-4 d-block">
               	<div class="meta">
-                  <div><a href="#">Sept 10, 2018</a></div>
+                  <div><a href="#">Dec 12, 2024</a></div>
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                 </div>
-                <h3 class="heading mt-2"><a href="#">The Delicious Pizza</a></h3>
+                <h3 class="heading mt-2"><a href="#">The Delicious coffee</a></h3>
                 <p>Welcome to Take & Go!
 
 </p>
@@ -506,11 +506,11 @@
               </a>
               <div class="text py-4 d-block">
               	<div class="meta">
-                  <div><a href="#">Sept 10, 2018</a></div>
+                  <div><a href="#">Sept 10, 2023</a></div>
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                 </div>
-                <h3 class="heading mt-2"><a href="#">The Delicious Pizza</a></h3>
+                <h3 class="heading mt-2"><a href="#">The Delicious Coffee</a></h3>
                 <p>Welcome to Take & Go!
 
 </p>
