--- a/about.html
+++ b/about.html
@@ -53,38 +53,55 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="home-slider owl-carousel">
+	<section class="home-slider owl-carousel">
+		<div class="slider-item" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+		  <div class="overlay"></div>
+		  <div class="container">
+			<div class="row slider-text justify-content-center align-items-center">
+			  <div class="col-md-7 col-sm-12 text-center ftco-animate">
+				<h1 class="mb-3 mt-5 bread">About Us</h1>
+				<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>About</span></p>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>
+	  
 
-      <div class="slider-item" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row slider-text justify-content-center align-items-center">
-
-            <div class="col-md-7 col-sm-12 text-center ftco-animate">
-            	<h1 class="mb-3 mt-5 bread">About Us</h1>
-	            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>About</span></p>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-about d-md-flex">
-    	<div class="one-half img" style="background-image: url(images/about.jpg);"></div>
-    	<div class="one-half ftco-animate">
-    		<div class="overlap">
-	        <div class="heading-section ftco-animate ">
-	        	<span class="subheading">Discover</span>
-	          <h2 class="mb-4">Us</h2>
-	        </div>
-	        <div>
-	  				<p>Discover Us
+	<section class="ftco-about d-md-flex">
+		<div class="one-half video">
+			<video autoplay loop muted playsinline class="video-background">
+				<source src="videos/about.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+		</div>
+		<div class="one-half ftco-animate">
+			<div class="overlap">
+				<div class="heading-section ftco-animate">
+					<span class="subheading">Discover</span>
+					<h2 class="mb-4">Us</h2>
+				</div>
+				<div>
+					<p>Discover Us
 						At Take & Go, we believe great coffee should be accessible to everyone. Founded in [Year], our passion for quality and community drives us to serve exceptional coffee sourced from sustainable farms. Join us for a quick coffee on the go or a relaxing break in our welcoming space.</p>
-	  			</div>
-  			</div>
-    	</div>
-    </section>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<style>
+		.video {
+			position: relative;
+			overflow: hidden;
+		}
+	
+		.video-background {
+			width: 100%;
+			height: auto;
+			object-fit: cover;
+		}
+	</style>
+	
 
     <section class="ftco-section img" id="ftco-testimony" style="background-image: url(images/bg_1.jpg);"  data-stellar-background-ratio="0.5">
     	<div class="overlay"></div>
