--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<span class="subheading">Welcome</span>
 				<h1 class="mb-4">Amazing Taste &amp; Beautiful Place</h1>
 				<p class="mb-4 mb-md-5">Welcome to Take & Go!</p>
-				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
+				<p><a href="https://takeandgo-order.vercel.app/" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
 			  </div>
 			</div>
 		  </div>
