--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<h1 class="mb-4">You can PRE order your coffee now.</h1>
 				<h1 class="mb-4">THEN TAKE IT & GO OR STAY :)</h1>
 				<p class="mb-4 mb-md-5">Welcome to Take & Go!</p>
-				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
+				<p><a href="https://takeandgo-order.vercel.app/" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/menu.html" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
 			  </div>
 			</div>
 		  </div>
